2006-05-09  Alexander Malysh <amalysh at kannel.org>
  * gw/smsbox.c: applied patch which resolved a number of memory leaks and
    potential segmentation faults in the smsbox_req_handle.
    Thanks to Peter Christensen <pch at coolsystems.dk> for provided patch.
    [Msg-Id: <445DFAFC.6030807@coolsystems.dk>]

2006-05-09  Alexander Malysh <amalysh at kannel.org>
  * doc/userguide/userguide.xml,gw/smsc/smsc_smpp.c,gwlib/cfg.def: added new
    SMPP config options 'bind-addr-ton' and 'bind-addr-npi' in order to be able
    to define bind settings that some SMSCs require.

2006-05-09  Stipe Tolj  <stolj at kannel.org>
  * Makefile.in: make sure we do NOT link in object files from the progs itself,
    they contain int/void main(), and we don't want that inside the libgw.a in
    order to allow users re-usage of the code inside the lib. Otherwise we would
    get a 'duplicate define main()' link error, if an external module tries to
    link against libgw.a after a successfull install.
    
2006-05-09  Stipe Tolj  <stolj at kannel.org>
  * gw/bb_store.c, gw/bearerbox.[ch]: detach the two queues 'incoming_sms' and
    'outgoing_sms' from the binding of bb_store.c. Now we pass a dispatcher
    function as argument to store_load() in order to let it access local scoped
    variables in the callers space.

2006-05-08  Stipe Tolj  <stolj at kannel.org>
  * Makefile.in: adding installing of all .h and .def files in the install 
    target, including the gw directory. This is required if external modules
    implementing own functionality will use gwlib and gw functions that are
    installed to the system.

2006-05-05  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: fixed #337. We must set RECONNECT status on connection
    before we put local queued messages into global queue.
    Thanks to <pch at coolsystems.dk> for patch.

2006-04-28  Alexander Malysh <amalysh at kannel.org>
  * gwlib/list.h: added example to the comment how to use gwlist_sort function.